# song-structure-mapper

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: index-C5xnCA03.js  index-CZB3p20E.css  index-DK8o2Hc8.js  index-Ds6TWav3.css
backend/: pyproject.toml
backend/app/: analyzer.py  main.py
backend/tests/: test_analyzer.py  test_api.py
docs/: MVP_PLAN.md
docs/plans/: 2026-06-03-audio-timeline-overlay.md  2026-06-03-real-upload-analysis-playback.md
scripts/: separate_stems.py
src/: App.css  App.tsx  analysis.ts  api.ts  index.css
