[project]
name = "song-structure-mapper-backend"
version = "0.1.0"
description = "FastAPI backend for Song Structure Mapper uploads and analysis jobs"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.124.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "httpx>=0.28.0",
]
